--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -13,9 +13,9 @@
     display: block;
 }
 
-.NavigationItem a:hover,
-.NavigationItem a:active,
-.NavigationItem a:active {
+.NavigationItem a.hover,
+.NavigationItem a.active,
+.NavigationItem a.active {
     color: 40A4C8;
 }
 
@@ -35,9 +35,9 @@
         border-bottom: 4px solid transparent;
     }
     
-    .NavigationItem a:hover,
-    .NavigationItem a:active,
-    .NavigationItem a:active {
+    .NavigationItem a.hover,
+    .NavigationItem a.active,
+    .NavigationItem a.active {
         background-color: #8F5C2C;
         border-bottom: 4px solid #40A4C8;
         color: white;
